-
Bug
-
Resolution: Fixed
-
Critical
-
Upstream
-
None
-
3
-
9223372036854775807
I'm getting many messages like this:
lctl: error invoking upcall /usr/sbin/lctl set_param ..lbug_on_grant_miscount=1
in the logs.
this was introduced in bb5d81ea95 ("LU-14543 target: prevent overflowing of tgd->tgd_tot_granted")
I don't quite understand why this clearly debugging tunable needs to be persisten in the config logs?
IMO, the better would be to have node-wide non-persisten tunable like osd's track_declare_assert
- is related to
-
LU-14543 tgt_grant_discard(): avoid tgd->tgd_tot_granted overflowing
-
- Resolved
-