lustre/tests/test-framework.sh
@@ -753,6 +753,7 @@ load_modules_local() {
 	fi
 	load_module ../lnet/klnds/$LNETLND
 	load_module obdclass/obdclass
+	MODOPTS_PTLRPC=${MODOPTS_PTLRPC:-"lbug_on_grant_miscount=1"}
 	load_module ptlrpc/ptlrpc
 	load_module ptlrpc/gss/ptlrpc_gss
 	load_module fld/fld
@@ -5359,7 +5360,6 @@ init_param_vars () {
 	(( MDS1_VERSION <= $(version_code 2.13.52) )) ||
 		do_nodes $(comma_list $(mdts_nodes)) \
 			"$LCTL set_param lod.*.mdt_hash=crush"
-	do_node $(mgs_node) "$LCTL set_param -P *.*.lbug_on_grant_miscount=1"
 	return 0
 }
 
